bld/wasm/test/inline/misc2.err
misc2.c(69): Error! E1156: Assembler error: 'Syntax error'
