bld/wasm/test/inline/misc2.asm
lgdt word ptr x
lidt word ptr x
lldt word ptr x
lldt ax
lmsw ax
lmsw word ptr x
lsl si,di
lsl eax,ebx
lsl bx,word ptr x
lsl eax,dword ptr x
nop
ret
ret 0004H
sahf
sgdt word ptr x
sidt word ptr x
sldt word ptr x
sldt ax
smsw ax
smsw word ptr x
stc
std
sti
stosb
stosw
stosd
str bx
str word ptr x
verr si
verw bx
verr word ptr x
verw word ptr x
wait
xlat
